# photon-ring

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.claude/: process.md
.github/workflows/: ci.yml
benches/: payload_scaling.rs  prefetchw_crosscore.rs  rdtsc_oneway.rs  throughput.rs
docs/: _config.yml  benchmark-methodology.html  benchmark-methodology.md  discussion-seqlock-soundness-and-no_std.md  hardware-seqlock-alternatives.md  index.html  multi-model-audit-2026-03-19.md  payload-scaling.html  payload-scaling.md  plot_payload_scaling.py  research-arbitrary-capacity-indexing.md  research-eliminating-cons.md  research-seqlock-alternatives.md  research-structural-alternatives-to-seqlock.md  technical-report.html  technical-report.md
examples/: backpressure.rs  diamond.rs  market_data.rs  pinned_latency.rs  pipeline.rs
photon-ring-async/: Cargo.toml  README.md
photon-ring-async/src/: group.rs  lib.rs  subscriber.rs
photon-ring-async/tests/: async_basic.rs
photon-ring-derive/: Cargo.toml
photon-ring-derive/src/: lib.rs
photon-ring-metrics/: Cargo.toml
photon-ring-metrics/src/: lib.rs
scripts/: latency_histogram.rs  plot_payload_scaling.py
src/: affinity.rs  barrier.rs  bus.rs  channel.rs  lib.rs  mem.rs  pod.rs  ring.rs  shutdown.rs  slot.rs  topology.rs  typed_bus.rs  wait.rs
src/channel/: constructors.rs  errors.rs  group.rs  mod.rs  mp_publisher.rs  publisher.rs  subscribable.rs  subscriber.rs
src/topology/: builder.rs  fan_out.rs  mod.rs  pipeline.rs
tests/: atomic_slots.rs  correctness.rs  loom_mpmc.rs  message_derive.rs
verification/: MC.cfg  MC.tla  README.md  seqlock.tla
