[package]
name = "photon-ring"
version = "0.5.0"
edition = "2021"
description = "Ultra-low-latency SPMC pub/sub using seqlock-stamped ring buffers. no_std compatible."
license = "MIT OR Apache-2.0"
keywords = ["pubsub", "spmc", "seqlock", "no_std", "zero-alloc"]
categories = ["concurrency", "no-std"]
readme = "README.md"
repository = "https://github.com/userFRM/photon-ring"
homepage = "https://github.com/userFRM/photon-ring"
documentation = "https://docs.rs/photon-ring"

[features]
hugepages = ["dep:libc"]

[dependencies]
hashbrown = "0.16.1"
spin = "0.10.0"
core_affinity2 = "0.15.4"
libc = { version = "0.2.183", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8.2"
disruptor = "4.0.0"

[[example]]
name = "market_data"

[[example]]
name = "pinned_latency"

[[example]]
name = "backpressure"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "rdtsc_oneway"
harness = false
