[package]
name = "photon-ring"
version = "2.3.0"
edition = "2021"
rust-version = "1.94"
description = "Ultra-low-latency SPMC pub/sub using seqlock-stamped ring buffers. no_std compatible."
license = "Apache-2.0"
keywords = ["pubsub", "spmc", "seqlock", "no_std", "zero-alloc"]
categories = ["concurrency", "no-std"]
readme = "README.md"
repository = "https://github.com/userFRM/photon-ring"
homepage = "https://github.com/userFRM/photon-ring"
documentation = "https://docs.rs/photon-ring"
exclude = [".github/"]

[features]
hugepages = ["dep:libc"]
derive = ["dep:photon-ring-derive"]

[dependencies]
hashbrown = "0.16.1"
spin = "0.10.0"
libc = { version = "0.2.183", default-features = false, optional = true }
photon-ring-derive = { version = "2.3.0", path = "photon-ring-derive", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows", target_os = "freebsd", target_os = "netbsd", target_os = "android"))'.dependencies]
core_affinity2 = "0.15.4"

[dev-dependencies]
criterion = "0.8.2"
crossbeam-channel = "0.5"
disruptor = "4.0.0"
libc = "0.2.183"

[[example]]
name = "market_data"

[[example]]
name = "pinned_latency"

[[example]]
name = "backpressure"

[[example]]
name = "pipeline"

[[example]]
name = "diamond"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "rdtsc_oneway"
harness = false

[[bench]]
name = "payload_scaling"
harness = false

[[bench]]
name = "prefetchw_crosscore"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

