[package]
name = "photon-ring-async"
version = "2.4.0"
edition = "2021"
rust-version = "1.94"
description = "Async wrappers for photon-ring pub/sub channels"
license = "Apache-2.0"
repository = "https://github.com/userFRM/photon-ring"

[dependencies]
photon-ring = { version = "2.4.0", path = ".." }

[dev-dependencies]
pollster = "0.4"
